environment/prod/servicemesh/servicemesh-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: redhatpay-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redhatpay
spec:
  hosts:
    - "*"
  gateways:
    - redhatpay-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: payment
            port:
              number: 8080
